--- a/src/assets/styles/foundation/_typography.scss
+++ b/src/assets/styles/foundation/_typography.scss
@@ -16,25 +16,17 @@ span {
   color: var(--primaryText);
 }
 
-.heading-font {
-  font-family: Fatimah;
-  @include glow-effect(text);
-}
-
-.content-font {
-  font-family: Almarai;
-  @include glow-effect(text);
-}
-
 h1,
 .h1 {
   font-size: clamp(3rem, 8vw, 5rem);
+  font-family: Fatimah-bk;
   line-height: 1;
 }
 
 h2,
 .h2 {
   font-size: clamp(2rem, 7vw, 4rem);
+  font-family: Fatimah-bl;
 }
 
 h3,
@@ -52,6 +44,14 @@ h5,
 h6,
 .h6 {
   font-size: 1rem;
+}
+
+.heading-font {
+  font-family: Fatimah;
+}
+
+.content-font {
+  font-family: Almarai;
 }
 
 p {
