--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -24,10 +24,10 @@
       aspect-ratio: 16/9;
 
       .video-container {
-        position: relative;
         display: flex;
         width: 100%;
         height: 100%;
+        @include video;
 
         &::after {
           content: '';
@@ -38,30 +38,6 @@
           height: 100%;
           background: linear-gradient(to left, var(--primary) 2%, var(--transparentPrimary) 30%, transparent);
           pointer-events: none;
-        }
-
-        .video {
-          width: 100%;
-          object-fit: cover;
-          object-position: center;
-        }
-
-        .play-button {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          width: 6rem;
-          aspect-ratio: 1/1;
-          background-color: rgba(0, 0, 0, 0.1);
-          background-image: url('/imgs/video-play.png');
-          background-position: center;
-          background-repeat: no-repeat;
-          background-size: cover;
-          border-radius: 50%;
-          border: none;
-          cursor: pointer;
-          z-index: 1;
         }
       }
     }
