--- a/src/pages/Contact/contact.scss
+++ b/src/pages/Contact/contact.scss
@@ -30,6 +30,7 @@
             gap: 0.5rem;
             color: #ffffff;
             text-decoration: none;
+            direction: ltr;
 
             span {
               color: var(--accent);
